# python-gofmtls

./: Makefile  README.md  pyproject.toml
sample/: main.go
src/gofmtls/: main.py
