[project]
name = "gofmtls"
version = "0.1.0"
description = "run go fmt via LS"
authors = [
    {name = "conao3", email = "conao3@gmail.com"},
]
dependencies = ["pydantic>=2.10.4"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.scripts]
gofmtls = "gofmtls.main:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "ruff>=0.8.6",
]
